# docs/swagger.json
@@ -16,7 +16,7 @@
         "version": "1.0"
     },
     "host": "localhost:3000",
-    "basePath": "/",
+    "basePath": "/api/v1",
     "paths": {
         "/comments": {
             "get": {
@@ -429,7 +429,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UpdateUserRequest"
                         }
                     }
                 ],
@@ -437,7 +437,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UpdateUserResponse"
                         }
                     }
                 }
@@ -537,35 +537,6 @@
         }
     },
     "definitions": {
-        "models.Comment": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "photo": {
-                    "$ref": "#/definitions/models.PhotoC"
-                },
-                "photo_id": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.UserC"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.CreateCommentRequest": {
             "type": "object",
             "properties": {
@@ -772,35 +743,6 @@
                 }
             }
         },
-        "models.Photo": {
-            "type": "object",
-            "properties": {
-                "caption": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "photo_url": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.UserP"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
         "models.PhotoC": {
             "type": "object",
             "properties": {
@@ -852,32 +794,6 @@
                 },
                 "username": {
                     "type": "string"
-                }
-            }
-        },
-        "models.SocialMedia": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "social_media_url": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user": {
-                    "$ref": "#/definitions/models.UserS"
-                },
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
@@ -974,41 +890,28 @@
                 }
             }
         },
-        "models.User": {
+        "models.UpdateUserRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UpdateUserResponse": {
             "type": "object",
             "properties": {
                 "age": {
                     "type": "integer"
-                },
-                "comments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Comment"
-                    }
-                },
-                "created_at": {
-                    "type": "string"
                 },
                 "email": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
-                },
-                "password": {
-                    "type": "string"
-                },
-                "photos": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.Photo"
-                    }
-                },
-                "socialMedia": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/models.SocialMedia"
-                    }
                 },
                 "updated_at": {
                     "type": "string"
@@ -1026,17 +929,6 @@
                 },
                 "id": {
                     "type": "integer"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.UserP": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
                 },
                 "username": {
                     "type": "string"
